<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar">

    </include>

    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bio1"
        android:textSize="@dimen/title_app"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bio2"
        android:textSize="@dimen/txt_nombre"
        android:textStyle="italic"
        android:background="@color/colorBlanco"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bio3"
        android:gravity="end"/>

</LinearLayout>
