<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mari709.coursera.petagram.activity.Contacto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/miActionBar"
            layout="@layout/actionbar">

        </include>

        <TextView
            android:id="@+id/txtContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/miActionBar"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/contacto"
            android:textAllCaps="true"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/tv_de"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContacto"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/de"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_nombre" />


        <TextView
            android:id="@+id/tv_emailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_de"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/emailUsuario"
            android:textSize="@dimen/txt_nombre" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_emailUsuario"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_asunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/pAsunto"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textSize="@dimen/txt_nombre" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/colorAccent"
            android:text="@string/enviar"
            android:textColor="@color/colorBlanco"
            android:textSize="@dimen/txt_nombre" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textInputLayout2"
            android:layout_alignStart="@+id/textInputLayout2"
            android:layout_below="@+id/textInputLayout2"
            android:textColorHint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_asunto"
                android:cursorVisible="true"
                android:hint="@string/mensaje"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:textSize="@dimen/txt_nombre" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
